# sandbox

daily-virtue/: .firebaserc  package-lock.json  package.json
daily-virtue/public/: index.html
linear_mpc_cpp/: CMakeLists.txt  Makefile  README.md  build.sh  main.cpp  matplotlibcpp.h  params.json
linear_mpc_cpp_three_omni_wheels/: .gitignore  README.md  main.cpp  params.json
linear_mpc_mecanum_wheel/: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp  params.json  requirements.txt
nonlinear_mpc_cpp_mecanum_wheel/: .gitignore  CMakeLists.txt  Makefile  main.cpp  nonlinearmpc.cpp  nonlinearmpc.h  obstacle.cpp  parameters.cpp  parameters.h  params.json  scopedtime.cpp  scopedtime.h  vehicle.cpp  vehicle.h
nonlinear_mpc_cpp_steer_and_accel/: CMakeLists.txt  Makefile  course.cpp  course.h  main.cpp  nonlinearmpc.cpp  nonlinearmpc.h  obstacle.h  parameters.cpp  parameters.h  params.json  path.csv  path_straight.csv  requirements.txt  utils.h  vehicle.cpp  vehicle.h
python_sliding_control/: README.md  main.py  two_wheel_vehicle.jla  two_wheel_vehicle.py
